@@ -218,6 +218,14 @@ If a login referral is received when connecting or when authentication fails, a
 A referral can also occur when login succeeds.  By default, no exception is
 thrown in this case.  To force an exception to be thrown and the authentication
 to fail, set the <code>mail.imap.referralexception</code> property to "true".
+<H4>COMPRESS Support</H4>
+<P>
+The IMAP COMPRESS extension
+(<A HREF="http://www.ietf.org/rfc/rfc4978.txt" TARGET="_top">RFC 4978</A>)
+is supported.
+If the server supports the extension and the
+<code>mail.imap.compress.enable</code> property is set to "true",
+compression will be enabled.
 <H4>Properties</H4>
 <P>
 The IMAP protocol provider supports the following properties,
@@ -806,10 +814,38 @@ connection.
 <TD>mail.imap.referralexception</TD>
 <TD>boolean</TD>
 <TD>
-If set to true and an IMAP login referral is returned when the autnetication
+If set to true and an IMAP login referral is returned when the authentication
 succeeds, fail the connect request and throw a
 {@link com.sun.mail.imap.ReferralException ReferralException}.
 Defaults to false.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.imap.compress.enable</TD>
+<TD>boolean</TD>
+<TD>
+If set to true and the IMAP server supports the COMPRESS=DEFLATE extension,
+compression will be enabled.
+Defaults to false.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.imap.compress.level</TD>
+<TD>int</TD>
+<TD>
+The compression level to be used, in the range -1 to 9.
+See the {@link java.util.zip.Deflater Deflater} class for details.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.imap.compress.strategy</TD>
+<TD>int</TD>
+<TD>
+The compression strategy to be used, in the range 0 to 2.
+See the {@link java.util.zip.Deflater Deflater} class for details.
 </TD>
 </TR>
 
